# quart-depends

./: .gitignore  README.md  pyproject.toml
src/quart_depends/: __about__.py  __init__.py  binders.py  extension.py  wiring.py
tests/: __init__.py
tests/integration/: common.py  test_annotated.py  test_basic.py  test_basic_async.py  test_custom_fields.py  test_database.py  test_extension.py  test_generators.py  test_overrides.py  test_provider.py
